completed the landing page, footer component

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <!-- End Inter Font -->
 
     <title>Datum</title>
+    <style>
+      *{
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
